--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,7 @@
     <div id="container" class="inner">
         {% include header.html %}
         <section id="main_content">
+          <h1>{{page.title}}</h1>
           {{ content }}
         </section>
         {% include copyright.html %}
