--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,3 +1,11 @@
+::selection {
+  background-color: #84ca7f;
+  color: #000;
+}
+code {
+    white-space: pre;
+  }
+
 blockquote, q {
 	quotes: none;
 }
@@ -164,11 +172,10 @@ form {
 /* GENERAL ELEMENT TYPE STYLES */
 
 h1 {
-  font-size: 32px;
+  text-align: center;
 } 
 
 h2 {
-  font-size: 22px;
   font-weight: bold;
   color: #303030;
   margin-bottom: 8px;
