增加数据库分类

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,7 @@
       <a href="/">Home</a>
       <a href="/java/">Java</a>
       <a href="/linux/">Linux</a>
+      <a href="/db/">数据库</a>
     </div>
   </section>
 </header>
