重新整理资源文件目录结构并添加代码高亮支持

--- a/r/css/stylesheet.css
+++ b/r/css/stylesheet.css
@@ -121,6 +121,10 @@ pre code {
   background-color: #303030;
   border: none;
   padding: 0;
+  white-space: pre;
+  white-space: pre-wrap;
+  word-break: break-all;
+  word-wrap: break-word;
 }
 
 ul, ol, dl {
