--- a/_layouts/list.html
+++ b/_layouts/list.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="/stylesheets/print.css" media="print">
+    <link rel="stylesheet" type="text/css" href="/r/css/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/r/css/print.css" media="print">
+    <link rel="stylesheet" type="text/css" href="/r/google-code-prettify/prettify.css">
     <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="/r/js/html5.js"></script>
     <![endif]-->
     <title>{{ page.title }}  --- blog.warningrc.com</title>
   </head>
