修改代码显示行号

--- a/_includes/js.html
+++ b/_includes/js.html
@@ -4,6 +4,6 @@
 </script>
 <script src="/r/google-code-prettify/prettify.js"></script>
 <script>
-     $('pre').addClass('prettyprint linenums').attr('style', 'overflow:auto');
+     $('pre').addClass('prettyprint linenums:0').attr('style', 'overflow:auto');
      window.prettyPrint && prettyPrint();
 </script>
