--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <link rel="stylesheet" type="text/css" href="/r/css/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/r/css/print.css" media="print">
-    <link rel="stylesheet" type="text/css" href="/r/google-code-prettify/prettify.css">
+<!--     <link rel="stylesheet" type="text/css" href="/r/google-code-prettify/prettify.css"> -->
     <!--[if lt IE 9]>
     <script src="/r/js/html5.js"></script>
     <![endif]-->
-    <title>{{ page.title }}  --- blog.warningrc.com</title>
+    <title>{{ page.title }}   blog.warningrc.com</title>
   </head>
 
   <body>
