增加留言功能

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,7 @@
       <a href="/java/">Java</a>
       <a href="/linux/">Linux</a>
       <a href="/db/">数据库</a>
+      <a href="/message.html">留言</a>
     </div>
   </section>
 </header>
