--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@
     <!--[if lt IE 9]>
     <script src="/r/js/html5.js"></script>
     <![endif]-->
-    <title>{{ page.title }}   blog.warningrc.com</title>
+    <title>{{ page.title }}</title>
   </head>
 
   <body>
