--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,7 @@
       <a href="/linux/">Linux</a>
       <a href="/db/">数据库</a>
       <a href="/message.html">留言</a>
+      <a href="/feeds.all.xml">订阅</a>
       <a href="http://weibo.com/weibowarning">微博</a>
     </div>
   </section>
