修改菜单连接打开方式

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,9 +5,9 @@
       <a href="/java/">Java</a>
       <a href="/linux/">Linux</a>
       <a href="/db/">数据库</a>
-      <a href="/message.html">留言</a>
-      <a href="/feeds.all.xml">订阅</a>
-      <a href="http://weibo.com/weibowarning">微博</a>
+      <a href="/message.html" target="_blank">留言</a>
+      <a href="/feeds.all.xml" target="_blank">订阅</a>
+      <a href="http://weibo.com/weibowarning" target="_blank">微博</a>
     </div>
   </section>
 </header>
