--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,8 @@
       <a href="/">Home</a>
       <a href="/java/">Java</a>
       <a href="/linux/">Linux</a>
-      <a href="/db/">数据库</a>
+      <a href="/db/">Database</a>
+      <a href="/other/">Other</a>
       <a href="/message.html" target="_blank">留言</a>
       <a href="/feeds.all.xml" target="_blank">订阅</a>
       <a href="http://weibo.com/weibowarning" target="_blank">微博</a>
