--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <link rel="stylesheet" type="text/css" href="/r/css/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="/r/css/print.css" media="print">
+        {% include css.html %}
 <!--     <link rel="stylesheet" type="text/css" href="/r/google-code-prettify/prettify.css"> -->
     <!--[if lt IE 9]>
     <script src="/r/js/html5.js"></script>
