--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <link rel="stylesheet" type="text/css" href="/r/css/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="/r/css/print.css" media="print">
-<!--     <link rel="stylesheet" type="text/css" href="/r/google-code-prettify/prettify.css"> -->
+        {% include css.html %}
     <!--[if lt IE 9]>
     <script src="/r/js/html5.js"></script>
     <![endif]-->
@@ -21,9 +19,9 @@
         </section>
         {% include copyright.html %}
         {% include share.html %}
-        {% include js.html %}
         {% include discuss.html %}
         {% include footer.html %}
+        {% include footer-js.html %}
     </div>
   </body>
 </html>
