--- a/r/css/stylesheet.css
+++ b/r/css/stylesheet.css
@@ -1,4 +1,4 @@
-::selection {
+﻿::selection {
   background-color: #84ca7f;
   color: #000;
 }
@@ -19,18 +19,13 @@ table {
   border-spacing: 0;
 }
 
-/* LAYOUT STYLES */
 body {
   font-size: 1em;
   line-height: 1.5; 
-  font-family: 'Helvetica Neue', Helvetica, Arial, serif;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
+  font-family: "微软雅黑","宋体",Arial;
   color: #6d6d6d;
   background-color: #333;
 }
-
-
-
 .inner {
   background: transparent url(../images/inner-bg.png) 50% 0 repeat;
   width: 900px;
@@ -106,10 +101,9 @@ code, pre {
 }
 
 code {
-  border: solid 1px #ddd;
-  background: #002451;
-  text-shadow: none;
-  color: #ebbbff;
+    border: solid 1px #ddd;
+    text-shadow: none;
+    color: #000000;
 }
 
 pre {
@@ -155,12 +149,15 @@ table {
 
 th {
   font-weight: 500;
+  word-break:keep-all; 
 }
 
 td {
-  border: 1px solid #ebebeb;
-  text-align: center; 
   font-weight: 300;
+}
+table,td,th {
+  border: solid #add9c0;
+  border-width: 1px 1px 1px 1px;
 }
 
 form {
@@ -220,9 +217,9 @@ p a {
 }
 
 blockquote {
-  border-left: 10px solid #e9e9e9;
-  margin-bottom: 20px;
-  padding: 0 0 0 30px;
+    padding: 0 0 0 30px;
+    border-left: 4px solid #DDD;
+    color: rgb(167, 167, 167);
 }
 footer {
   background: transparent url('../images/hr.png') 0 0 no-repeat;
