--- a/_includes/footer-js.html
+++ b/_includes/footer-js.html
@@ -5,4 +5,12 @@
      $('pre>ol>li').addClass('list-style-type:decimal');
      window.prettyPrint && prettyPrint();
 </script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122225193-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-122225193-1');
+</script>
